--- a/zav3.html
+++ b/zav3.html
@@ -21,8 +21,8 @@
 	<div><h1>Nanodegrees end Courses</h1></div>
 	<div class="form">
 		<form action="" type="post">
-			<label for="search-id"> <img src="screen/5.jpg" alt="search"></label>
-		<input class="search" type="search" name="saerch" id="search-id" placeholder="Search Course Inforvation">
+			<label for="search-id"> </label>
+		<input class="search" type="search" name="saerch" id="search-id" placeholder="Search Course Inforvation"><img src="screen/5.jpg" alt="search">
 		</form>
 	</div>
 	</div>
