--- a/zav3.html
+++ b/zav3.html
@@ -21,8 +21,8 @@
 	<div><h1>Nanodegrees end Courses</h1></div>
 	<div class="form">
 		<form action="" type="post">
-			<label for="search-id"> </label>
-		<input class="search" type="search" name="saerch" id="search-id" placeholder="Search Course Inforvation"><img src="screen/5.jpg" alt="search">
+			<label for="search-id"> <img src="screen/5.jpg" alt="search"></label>
+		<input class="search" type="search" name="saerch" id="search-id" placeholder="Search Course Inforvation">
 		</form>
 	</div>
 	</div>
@@ -70,16 +70,15 @@ The minute-hand is 14 feet long. Its weight is equal to that of two bags of coal
 	<div class="block">
 	<div class="block5">
 		<img src="screen/6.jpg" alt="">
-		 <h2>Front-End Web Developer Nanodegree</h2>
+		 <h2>Front-End Web Developer Nanodegree</h2><div class="inter2"><img src="screen/9.jpg" alt=""><span5>Intermediate<span5> </div>
 		<p>Become a Front-End Web Developer by completing a variety of projects for your portfolio-become an HTML, CSS and JavaScript pro!</p>
 	</div>
 	<div class="block6">
 		<img src="screen/7.jpg" alt="">
-		 <h2>Full Stack Web Developer Nanodegree <img class="img2" src="screen/8.jpg" alt=""></h2> 
+		 <h2>Full Stack Web Developer Nanodegree <img class="img2" src="screen/8.jpg" alt=""></h2> <div class="inter"><img src="screen/9.jpg" alt=""><span4>Intermediate<span4> </div>
 		<p>Learn how to create server-side, data-driven web aplications that support any front-end and can scale to support hunders of thousands of users.  </p>
 	</div>
 	</div>
-
 	</div>
 </body>
 </html>
