--- a/zav3.html
+++ b/zav3.html
@@ -22,11 +22,10 @@
 	<div class="form">
 		<form action="" type="post">
 			<label for="search-id"> <img src="screen/5.jpg" alt="search"></label>
-		<input class="search" type="search" name="saerch" id="search-id" placeholder="Search Course Inforvation">
+			<input class="search" type="search" name="saerch" id="search-id" placeholder="Search Course Inforvation">
 		</form>
 	</div>
 	</div>
-	
 	<div class="column-left">
 		<div class="category">
 		<p>CATEGORY</p>
@@ -42,15 +41,15 @@
 		</ul>
 	</div>
 	<div class="form2">
-		<p>SKILL LEVEL</p>
+			<p>SKILL LEVEL</p>
 		<form action="" type="post">
 			<ul>
-			<li><label><input type="checkbox" name="Nev To Tech">Nev To Tech</label></li>
-			<li><label><input type="checkbox" name="Beginner">Beginner</label></li>
-			<li><label><input type="checkbox" name="Intermediate" checked>Intermediate</label> </li>
-			<li><label><input type="checkbox" name="Advanced"></label>Advanced</li>
-		</ul>
-			<p>BUILT BY</p>
+				<li><label><input type="checkbox" name="Nev To Tech">Nev To Tech</label></li>
+				<li><label><input type="checkbox" name="Beginner">Beginner</label></li>
+				<li><label><input type="checkbox" name="Intermediate" checked>Intermediate</label> </li>
+				<li><label><input type="checkbox" name="Advanced"></label>Advanced</li>
+			</ul>
+				<p>BUILT BY</p>
 			<ul>
 				<li><label><input type="checkbox" name="Facebook">Facebook</label></li>
 				<li><label><input type="checkbox" name="Google">Google</label> </li>
@@ -59,20 +58,19 @@
 	</div>
 	</div>
 	<div class="all">
-	<div class="column-rignt">
-		<h2>Web Development</h2>
-		<p>The big clock on the tower of the Palace of Westminster in London is often called Big Ben. But Big Ben is really the bell of the clock. It is the biggest clock bell in Britain. It weighs 13.5 tons.
-The clock tower is 318 feet high. You have to go up 374 steps to reach the top. So the clock looks small from the pavement below the tower.
-But its face is 23 feet wide. It would only just fit into some classrooms.
-The minute-hand is 14 feet long. Its weight is equal to that of two bags of coal. The hour-hand is 9 feet long.
-</p>
-	</div>
+		<div class="column-rignt">
+			<h2>Web Development</h2>
+			<p>The big clock on the tower of the Palace of Westminster in London is often called Big Ben. But Big Ben is really the bell of the clock. It is the biggest clock bell in Britain. It weighs 13.5 tons.The clock tower is 318 feet high. You have to go up 374 steps to reach the top. So the clock looks small from the pavement below the tower.
+			But its face is 23 feet wide. It would only just fit into some classrooms.
+			The minute-hand is 14 feet long. Its weight is equal to that of two bags of coal. The hour-hand is 9 feet long.
+			</p>
+		</div>
 	<div class="block">
-	<div class="block5">
-		<img src="screen/6.jpg" alt="">
-		 <h2>Front-End Web Developer Nanodegree</h2><div class="inter2"><img src="screen/9.jpg" alt=""><span5>Intermediate<span5> </div>
-		<p>Become a Front-End Web Developer by completing a variety of projects for your portfolio-become an HTML, CSS and JavaScript pro!</p>
-	</div>
+		<div class="block5">
+			<img src="screen/6.jpg" alt="">
+		 	<h2>Front-End Web Developer Nanodegree</h2><div class="inter2"><img src="screen/9.jpg" alt=""><span5>Intermediate<span5> </div>
+			<p>Become a Front-End Web Developer by completing a variety of projects for your portfolio-become an HTML, CSS and JavaScript pro!</p>
+		</div>
 	<div class="block6">
 		<img src="screen/7.jpg" alt="">
 		 <h2>Full Stack Web Developer Nanodegree <img class="img2" src="screen/8.jpg" alt=""></h2> <div class="inter"><img src="screen/9.jpg" alt=""><span4>Intermediate<span4> </div>
